--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="./js/myfunctions.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="css/mystyle.css" media="screen">
     <title>PHP Exercise Menu</title> 
 
